--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <a id="gitHubLink" href="https://github.com/smcueto" target="_blank">
                     <i class="fab fa-github" aria-hidden="true"></i></a>
                 <!-- PDF Resume -->
-                <a id="resumePdfLink" href="https://drive.google.com/file/d/1VsmSadODiNiNIAg6GDusvfuT8eJB5l6V/view" target="_blank">
-                <i class="far fa-file-pdf-o" aria-hidden="true"></i> Resume</a>
+                <a id="resumePdfLink" href="https://drive.google.com/file/d/1VsmSadODiNiNIAg6GDusvfuT8eJB5l6V/view?usp=sharing" target="_blank">
+                <i class="far fa-file-pdf-o" aria-hidden="true"></i>CV</a>
                 <!-- Static Resume Website NEED TO RECODE -->
                 <!-- <a id="onlineResumeLink" href="https://smcueto.github.io/staticResumeWebsite/" target="_blank">
                     <i class="far fa-file" aria-hidden="true"></i>Coded Online Resume</a>  -->
